Fix bug where background gradient was getting cut off when zooming out of the page

--- a/frontend/src/app/features/board-page/board/board.component.scss
+++ b/frontend/src/app/features/board-page/board/board.component.scss
@@ -2,7 +2,7 @@
 
 .board-page-wrapper {
   position: relative;
-  width: min-content;
+  width: 100%;
   height: 100%;
   overflow: hidden; /* Hide any overflowing content */
 
